<resources>
    <string name="app_name">GYM666</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="account">account</string>
    <string name="password">000000</string>
    <string name="news">news</string>
    <string name="train">train</string>
    <string name="myself">myself</string>
    <string name="friends">friends</string>
    <string name="setting">setting</string>
</resources>
